Fix back btn alignment. Increase title font size

--- a/pwa/ios/css/nav.css
+++ b/pwa/ios/css/nav.css
@@ -84,11 +84,10 @@ a.nav-icon:visited {
 .back-btn svg {
   height: 1.25rem;
   width: 1.25rem;
-  /*  Help align to text  */
-  padding-bottom: 0.25rem;
 }
 
 .top-nav-bar-title {
   text-align: center;
   font-weight: 700;
+  font-size: 1.125rem;
 }
